--- a/myStyle.css
+++ b/myStyle.css
@@ -1,3 +1,35 @@
+@media only screen and (max-width: 600px) {
+
+	nav a img {
+		width: 25%;
+		/*display: none;*/
+	}
+
+	#home {
+		display: none;
+	}
+
+	section#contactus, #product {
+		display: none;
+	}
+
+	#aboutus {
+		width: 90%;
+		margin: auto;
+	}
+
+	#aboutus p {
+		text-align: justify;
+		font-size: 10px;
+		padding: 10px 10px;
+	}
+
+	section#visionmision {
+		height: 550px;
+	}
+}
+
+
 nav ul li a {
 	font-weight: bold;
 	text-transform: uppercase;
@@ -10,4 +42,9 @@ nav ul li a:hover {
 
 #visionmision {
 	height: 450px;
+}
+
+#aboutus p {
+	text-align: justify;
+	padding: 10px 15px;
 }
